2004-05-27 10:55 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridparallelsmoothfaceinterior_) renamed to
	gridparallelsmooth_.
	* src/gridcad.c (gridSmoothFaceInterior) moved to gridmpi
	* src/gridmpi.c (gridParallelSmooth) moved from gridcad

2004-05-27 09:30 Mike Park  <mike.park@nasa.gov>

	* src/gridgeom.c (gridParallelGeomLoad) added GeomNodes and
	GeomEdges to existing GeomFaces.
	
2004-05-26 15:25 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c exposed a series of lower level routines to allow
	parallel gridmove projection when called from Fun3D.

2004-05-19 08:35 Mike Park  <mike.park@nasa.gov>

	* src/layer.c (layerTerminateCollidingTriangles) modified to
	expose a sizing for tets used for collision test. Perform test on
	triangles after applying the advance displacement.

2004-05-13 17:00 Mike Park  <mike.park@nasa.gov>

	* configure.ac added Linux ProE wildfire dll build for refine and
	synced up AutoTools with GridEx.
	* src/proemain.c copied a one-off refine main to avoid
	command-line arguments.
	
2004-05-11 11:19 Mike Park  <mike.park@nasa.gov>

	* /src/main.c GridMove object can be used to do projection. envoke
	refine with -m to try it. It may or may not be any more robust
	than the existing method.

2004-05-06 12:00 Mike Park  <mike.park@nasa.gov>

	* /src/gridmove.c made a new grid child object to test grid
	movement. Has methods to calculate edges (gridmoveSprings) and
	(gridmoveSpringRelaxation).

2004-05-05 16:20 Mike Park  <mike.park@nasa.gov>

	* /src/grid.c (gridPack) made pack register method for child objects.
	* /src/grid.c added a method to register for grid free notification.

2004-05-04 10:35 Mike Park  <mike.park@nasa.gov>

	* /src/gridfortan.c (gridfreezenode_) correctly converted Fortran
	to C numbering.

2004-05-03 11:15 Mike Park  <mike.park@nasa.gov>

	* Made 0.7.3 Release. (Tagging before 
	gridmpi:gridParallelEdgeCollapse extension.)
	* /src/gridmpi.c (gridApplyQueue) added edges.
	* /src/queue.c added edges.
