@@ -1,3 +1,7 @@
+2004-05-27 11:35 Mike Park  <mike.park@nasa.gov>
+
+	* /src/FAKEGeomExtras.c added CADGeom_GetEdge and CADGeom_EdgeGrid.
+
 2004-05-27 10:55 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridfortran.c (gridparallelsmoothfaceinterior_) renamed to
